[tool.poetry]
name = "bud-ml-node"
version = "0.1.0"
description = ""
authors = ["RahulAR"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
langchain = "^0.0.138"
openai = "^0.27.4"
pydantic = "^1.10.7"
replicate = "^0.8.1"

[tool.poetry.scripts]
start = "server.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
